# Super-Intel-NPU

./: .gitignore  LICENSE  README.md  launch.sh  launch_qwen.sh  verify_syntax.py  windows_launch.ps1  windows_setup_env.ps1
archive/: linux_launch.sh  linux_launch_qwen.sh
documentation/: 2026-01-13_21-15-00_Fix_Bake_Model_Reshape_TypeError.info.txt  2026-01-14_01-48-16_Fix_Bus_Error_Model_Baking.info.txt  2026-01-14_02-19-17_Fix_Beam_Idx_Static_Shape.info.txt  2026-01-14_02-45-00_Fix_NPU_Dynamic_Shapes.info.txt  2026-01-14_03-15-00_Fix_NPU_Static_Loop.info.txt  2026-01-14_10-00-00_Fix_NPU_Dynamic_Errors.info.txt  2026-01-14_10-10-00_Fix_Supervisor_BeamIdx.info.txt  2026-01-14_13-00-00_Bake_Method_Comparison.info.txt  2026-01-14_19-45-00_Process_and_Troubleshooting.info.txt  2026-01-14_20-45-00_NPU_Stateless_Architecture.info.txt  2026-01-14_21-00-00_Architecture_and_Tokenizer_Guide.info.txt  2026-01-14_22-55-00_Runtime_Fixes_and_Release.info.txt  2026-01-15_01-20-00_NPU_Turbo_Fix.info.txt  2026-01-15_06-12-02_NPU_Int32_Fix.info.txt  2026-01-15_14-02-50_NPU_Tools_and_Fixes.info.txt  2026-01-15_14-44-42_Usage_Guide.info.txt  2026-01-15_15-10-00_Qwen_Bake_Fix.info.txt  2026-01-15_16-15-00_Qwen_Runtime_Fixes.info.txt  2026-01-15_16-50-00_Qwen_Debug_Logging.info.txt  2026-01-15_18-27-34_Qwen_New_Offering.info.txt  2026-01-15_19-50-00_Qwen_Rebake_Fix.info.txt  2026-01-15_20-45-00_Qwen_Supervisor_Integrity.info.txt  2026-01-15_22-30-00_Qwen_Trace_Logging.info.txt  2026-01-16_00-00-00_Qwen_Int8_Dynamic_Experiment.info.txt  2026-01-16_00-15-00_Qwen_Int8_Device_Order.info.txt  2026-01-27_Linux_Legacy_Notes.info.txt  (+18 more)
src/cpp/: CMakeLists.txt  executive_shard.cpp
(+57 files in other folders)
